# Spotifyle

./: .gitignore  CLAUDE.md  MODERNIZATION_PRD.md  MODERNIZATION_PRD_EXPANDED.md  README.md  SPOTIFYLE_MODERNIZATION_PRD.md  api.dockerfile  docker-compose.yml  web.dockerfile
api/: .gitignore  pyproject.toml  requirements.txt
api/assets/: admin.py  apps.py  models.py  schemas.py  signals.py  tasks.py
api/assets/migrations/: 0001_initial.py  0002_rename_image_path_spotifyasset_image_and_more.py  0003_alter_spotifyasset_image_alter_spotifyasset_preview_and_more.py
api/auth_api/: admin.py  api.py  jwt.py  models.py  schemas.py  spotify.py  tests.py
api/auth_api/migrations/: 0001_initial.py  0002_alter_spotifytoken_access_token_and_more.py
api/core/: api.py  settings.py  urls.py
api/game_api/: admin.py  api.py  models.py  schemas.py  stage_maker.py  stages.py  stop_words.py  tasks.py  trivia.py
api/game_api/migrations/: 0001_initial.py  0002_alter_game_game_code_alter_game_task_id.py  0002_stage_scoreboard_choice.py  0003_rename_spotify_assert_choice_spotify_asset.py  0004_game_processed_game_task_id.py  0005_game_name.py
api/play_api/: admin.py  api.py  apps.py  models.py  schemas.py  signals.py
api/play_api/migrations/: 0001_initial.py  0002_playerprofile.py  0003_rename_user_playerprofile_player.py  0004_playerprofile_biggest_gainer_and_more.py  0005_alter_playerprofile_biggest_gainer_and_more.py  0006_scoreboard_id_alter_scoreboard_game.py
api/profile_api/: api.py  apps.py  models.py  schemas.py  signals.py  tests.py
spotifyle-modern/: .dockerignore  (+12 more)
(+162 files in other folders)
